Add standalone peer monitor with discovery, scoring, and XDPoS support
Replace the upstream-dependent probe tier with a fully standalone peer
monitoring system. The proxy now discovers XDC peers via DHT, maintains
persistent RLPx connections, scores peers on chain freshness/latency/
reliability, and exposes results via HTTP API.

Key changes:
- Discovery via discv4 DHT with bootnode seeding (handles XDC's shared-key nodes)
- Protocol negotiation: use highest common eth version (eth/100 for XDC)
- Status mirroring: read peer's Status first, mirror TD/Head/Genesis so peer
  treats us as synced and sends consensus messages
- XDPoS v2 Vote message decoding for live head block tracking
- Block cache (256 blocks) serving GetHeaders/GetBodies from monitored peers
- Broadcaster for NewBlock/Tx propagation between monitored peers
- PeerStore with multi-factor scoring (chain head 40pts, latency 20pts,
  recency 20pts, reliability 20pts)
- HTTP API: GET /stats, /peers, /peers/export?min_score=N
- Docker Compose with optional XDC node (profile: with-upstream)
- Makefile helpers for build, docker, and API queries

Tested 5min on XDC mainnet: 53 DHT nodes discovered, 2 peers connected,
head block tracked live at 99.3M, top peer score 89/100.

--- a/example/docker-compose.yml
+++ b/example/docker-compose.yml
@@ -1,12 +1,14 @@
-# Example docker-compose.yml for running rlpx-proxy with an XDC node.
+# docker-compose.yml for running rlpx-proxy as a standalone peer monitor.
+#
+# The XDC node is optional — the monitor can run standalone with just bootnodes.
 #
 # Setup:
 #   1. cd example/
 #   2. cp .env.example .env  (fill in your keys)
-#   3. Create a static-nodes.json with enode URLs to connect to
-#   4. docker compose up -d --build
+#   3. docker compose up -d --build
 #
-# The rlpx-proxy Dockerfile is in the parent directory (the Go project root).
+# Standalone (no XDC node):
+#   docker compose up -d --build rlpx-proxy
 
 services:
   xdc-node:
@@ -14,6 +16,9 @@ services:
       context: .
       dockerfile: Dockerfile.xdc-arm64
     image: xdposchain-arm64:v2.6.8
+    restart: unless-stopped
+    profiles:
+      - with-upstream
     expose:
       - "30303/tcp"
     ports:
@@ -23,22 +28,30 @@ services:
       - NETWORK=mainnet
       - PRIVATE_KEY=${ACCOUNT_KEY}
       - XDC_NODEKEYHEX=${NODE_P2P_KEY}
+      - SYNC_MODE=full
+      - GC_MODE=archive
     volumes:
-      - ./xdc-data:/work/xdcchain
+      - xdc-data:/work/xdcchain
+      - ./start-xdc.sh:/work/start.sh:ro
 
   rlpx-proxy:
     build:
       context: ..
       dockerfile: Dockerfile
+    restart: unless-stopped
     ports:
       - "30303:30303/tcp"
+      - "30301:30301/udp"
+      - "8080:8080"
     environment:
       - NODE_PRIVATE_KEY=${NODE_P2P_KEY}
-      - UPSTREAM_HOST=xdc-node
-      - UPSTREAM_PORT=30303
-      - PEERS_FILE=/etc/rlpx-proxy/peers.json
-      - MAX_OUTBOUND=10
+      - DISCOVERY_ADDR=:30301
+      - MAX_OUTBOUND=${MAX_OUTBOUND:-100}
+      - PROPAGATE=${PROPAGATE:-true}
+      - API_ADDR=:8080
+      - BOOTNODES_FILE=/bootnodes.txt
     volumes:
-      - ./static-nodes.json:/etc/rlpx-proxy/peers.json:ro
-    depends_on:
-      - xdc-node
+      - ./xdc-bootnodes.txt:/bootnodes.txt:ro
+
+volumes:
+  xdc-data:
