Add discv5 discovery, remove rlpx-monitor and xdc-node, clean up project
- Add discv5 alongside discv4 (2.5x more nodes discovered on XDC mainnet)
- Remove cmd/rlpx-monitor (replaced by built-in PeerStore + HTTP API)
- Remove xdc-node docker infrastructure (not needed for standalone mode)
- Remove stale data files from example/
- Add docker buildx multi-platform support (linux/amd64, linux/arm64)
- Clean up Makefile, Dockerfile, docker-compose, .gitignore, .dockerignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,18 @@
 # Build artifacts
 build/
 /rlpx-proxy
-/rlpx-monitor
 
-# Chain data (large)
+# Chain data
 xdc-data/
 
 # Secrets
 .env
+example/.env
 
-# Generated data files (use example/ for samples)
+# Generated data
 /peers.json
 /good-peers.json
 /static-nodes.json
-/static-nodes-full.json
-/bootnodes.list
 
 # IDE
 .idea/
