--- a/example/.env.example
+++ b/example/.env.example
@@ -1,5 +1,9 @@
-# Node's P2P private key (hex, no 0x prefix)
-NODE_P2P_KEY=your_node_p2p_private_key_hex_here
+# Node's P2P private key (hex, no 0x prefix).
+# Generate with: openssl rand -hex 32
+NODE_P2P_KEY=
 
-# Account private key (for XDC node)
-ACCOUNT_KEY=your_account_private_key_hex_here
+# Max concurrent outbound connections (default: 100).
+# MAX_OUTBOUND=100
+
+# Propagate blocks/txs between connected peers (default: true).
+# PROPAGATE=true
